--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,9 +1,9 @@
 name: .NET Docker Build
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "preprod" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "preprod" ]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -11,4 +11,6 @@ jobs:
     - uses: actions/checkout@v4
     # Build Docker image
     - name: Build Docker image
-      run: docker build -t badgeur-backend:latest ./backend
+      run: docker build -f ./backend/Dockerfile -t badgeur-backend:latest .
+
+
