Added the ability to update a BLE

--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -4,5 +4,15 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "Supabase": {
+    "Url": "https://yoururlhere.supabase.co",
+    "Key": "yourKeyHere"
+  },
+  "Authentication": {
+    "ValidIssuer": "https://yoururlhere.supabase.co",
+    "ValidAudience": "authenticated",
+    "JwtSecret": "yourJwtSecretHere"
   }
 }
