--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,31 @@
-version: '3.8'
-
 services:
-  backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-    container_name: backend
-    ports:
-      - "5158:5158"
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-    networks:
-      - badgeur-network
-
   reverse-proxy:
     build:
       context: ./reverse-proxy
       dockerfile: Dockerfile
-    container_name: reverse-proxy
     ports:
-      - "5159:5159"
+      - "8080:8080"
     environment:
+      - ASPNETCORE_URLS=http://+:8080
+      - ASPNETCORE_ENVIRONMENT=Development
+      # Override the backend address to point to the Docker service
+      - ReverseProxy__Clusters__badgeur-api__Destinations__badgeur-api/destination1__Address=http://badgeur-backend:8080/
+    depends_on:
+      - badgeur-backend
+    networks:
+      - badgeur-network
+
+  badgeur-backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    expose:
+      - "8080"
+    environment:
+      - ASPNETCORE_URLS=http://+:8080
       - ASPNETCORE_ENVIRONMENT=Development
     networks:
       - badgeur-network
-    depends_on:
-      - backend
 
 networks:
   badgeur-network:
