--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,7 @@ services:
     environment:
       - 'ASPNETCORE_URLS=http://+:8080'
       - ASPNETCORE_ENVIRONMENT=Development
-      - >-
-        ReverseProxy__Clusters__badgeur-api__Destinations__badgeur-api/destination1__Address=http://badgeur-backend:8080/
+      - ReverseProxy__Clusters__badgeur-api__Destinations__badgeur-api/destination1__Address=http://badgeur-backend:8080/
     depends_on:
       - badgeur-backend
     networks:
