--- a/.github/workflows/docker-prod.yml
+++ b/.github/workflows/docker-prod.yml
@@ -16,3 +16,6 @@ jobs:
     - name: Launch the docker-compose
       working-directory: ./
       run: docker compose -f docker-compose.prod.yml up --build
+    - name: Stop containers
+      if: always()
+      run: docker-compose -f "docker-compose.prod.yml" down
