--- a/.github/workflows/docker-dev.yml
+++ b/.github/workflows/docker-dev.yml
@@ -13,9 +13,12 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
-    - name: Launch the docker-compose
+    - name: Build the docker-compose
       working-directory: ./
-      run: docker compose -f docker-compose.dev.yml up --build
+      run: docker compose -f docker-compose.dev.yml build
+    - name: Run the docker-compose
+      working-directory: ./
+      run: docker compose -f docker-compose.dev.yml up
     - name: Stop containers
       if: always()
       run: docker-compose -f "docker-compose.dev.yml" down
