--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -22,7 +22,13 @@ services:
       - '8080'
     environment:
       - 'ASPNETCORE_URLS=http://+:8080'
-      - ASPNETCORE_ENVIRONMENT=Production
+      - ASPNETCORE_ENVIRONMENT=Development
+      - Supabase__Url=${SUPABASE_URL}
+      - Supabase__Key=${SUPABASE_KEY}
+      - Authentication__ValidIssuer=${SUPABASE_URL} 
+      - Authentication__ValidAudience=authenticated
+      - Authentication__JwtSecret=${JWT_SECRET}
+
     networks:
       - badgeur-network
 
