Fixed issues with the docker-compose build

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -20,6 +20,8 @@ services:
       dockerfile: Dockerfile
     expose:
       - '8080'
+    env_file:
+      - ./backend/.env
     environment:
       - 'ASPNETCORE_URLS=http://+:8080'
       - ASPNETCORE_ENVIRONMENT=Development
