--- a/.github/workflows/docker-dev.yml
+++ b/.github/workflows/docker-dev.yml
@@ -1,30 +1,38 @@
 name: Docker-Compose - Dev Build
 
 on:
-  pull_request:
-    branches: [ "preprod" ]
   push:
     branches: [ "preprod" ]
 
 jobs:
   docker:
-    timeout-minutes: 5
     runs-on: ubuntu-latest
+    timeout-minutes: 5
+    # If your secrets are in a GitHub Environment named "preprod", uncomment:
+    # environment: preprod
+    env:
+      SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+      SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
+      JWT_SECRET:   ${{ secrets.JWT_SECRET }}
+
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Build the docker-compose
-      working-directory: ./
-      run: docker compose -f docker-compose.dev.yml build
+      - uses: actions/checkout@v4
 
-    - name: Run the docker-compose
-      working-directory: ./
-      run: docker compose -f docker-compose.dev.yml up
-      env: 
-            SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-            SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
-            JWT_SECRET: ${{ secrets.JWT_SECRET }}
+      - name: Sanity check variables (masked)
+        run: |
+          test -n "$SUPABASE_URL" || (echo "SUPABASE_URL missing" && exit 1)
+          test -n "$SUPABASE_KEY" || (echo "SUPABASE_KEY missing" && exit 1)
+          test -n "$JWT_SECRET"   || (echo "JWT_SECRET missing" && exit 1)
 
-    - name: Stop containers
-      if: always()
-      run: docker compose -f "docker-compose.dev.yml" down
+      - name: Compose config (fail fast if vars missing)
+        run: docker compose -f docker-compose.dev.yml config
+
+      - name: Build images
+        run: docker compose -f docker-compose.dev.yml build
+
+      - name: Run stack
+        run: docker compose -f docker-compose.dev.yml up -d --build
+
+      - name: Stop containers
+        if: always()
+        run: docker compose -f docker-compose.dev.yml down
