--- a/.github/workflows/docker-prod.yml
+++ b/.github/workflows/docker-prod.yml
@@ -1,30 +1,37 @@
 name: Docker-Compose - Prod Build
 
 on:
-  pull_request:
-    branches: [ "main" ]
   push:
     branches: [ "main" ]
 
 jobs:
   docker:
-    timeout-minutes: 5
     runs-on: ubuntu-latest
+    timeout-minutes: 5
+
+    env:
+      SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+      SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
+      JWT_SECRET:   ${{ secrets.JWT_SECRET }}
+
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Build the docker-compose
-      working-directory: ./
-      run: docker compose -f docker-compose.prod.yml build
+      - uses: actions/checkout@v4
 
-    - name: Run the docker-compose
-      working-directory: ./
-      run: docker compose -f docker-compose.prod.yml up
-      env: 
-            SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-            SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
-            JWT_SECRET: ${{ secrets.JWT_SECRET }}
+      - name: Sanity check variables (masked)
+        run: |
+          test -n "$SUPABASE_URL" || (echo "SUPABASE_URL missing" && exit 1)
+          test -n "$SUPABASE_KEY" || (echo "SUPABASE_KEY missing" && exit 1)
+          test -n "$JWT_SECRET"   || (echo "JWT_SECRET missing" && exit 1)
 
-    - name: Stop containers
-      if: always()
-      run: docker compose -f "docker-compose.prod.yml" down
+      - name: Compose config
+        run: docker compose -f docker-compose.prod.yml config
+
+      - name: Build images
+        run: docker compose -f docker-compose.prod.yml build
+
+      - name: Run stack
+        run: docker compose -f docker-compose.prod.yml up -d --build
+
+      - name: Stop containers
+        if: always()
+        run: docker compose -f docker-compose.prod.yml down
