--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,19 @@
 # Build results
 bin/
 obj/
+/backend/obj
 Debug/
 Release/
 
-# Visual Studio cache/options
+# Cache/options
 .vs/
 *.suo
 *.user
+*.idea
+
+# Coverage / SonarQube
+*.sonarqube
+TestResults/
 
 # NuGet packages
 packages/
