add plannings in reverse proxy

--- a/reverse-proxy/appsettings.json
+++ b/reverse-proxy/appsettings.json
@@ -49,6 +49,12 @@
         "Match": {
           "Path": "/teams/{**catch-all}"
         }
+      },
+      "planning": {
+        "ClusterId": "badgeur-api",
+        "Match": {
+          "Path": "/plannings/{**catch-all}"
+        }
       }
     },
     "Clusters": {
