add back + front reservation room

--- a/reverse-proxy/appsettings.json
+++ b/reverse-proxy/appsettings.json
@@ -55,6 +55,18 @@
         "Match": {
           "Path": "/plannings/{**catch-all}"
         }
+      },
+      "booking-rooms": {
+        "ClusterId": "badgeur-api",
+        "Match": {
+          "Path": "/booking-rooms/{**catch-all}"
+        }
+      },
+      "rooms": {
+        "ClusterId": "badgeur-api",
+        "Match": {
+          "Path": "/rooms/{**catch-all}"
+        }
       }
     },
     "Clusters": {
