add vehicules in reverse proxy

--- a/reverse-proxy/appsettings.json
+++ b/reverse-proxy/appsettings.json
@@ -55,6 +55,18 @@
         "Match": {
           "Path": "/plannings/{**catch-all}"
         }
+      },
+      "vehicules": {
+        "ClusterId": "badgeur-api",
+        "Match": {
+          "Path": "/vehicules/{**catch-all}"
+        }
+      },
+      "booking-vehicules": {
+        "ClusterId": "badgeur-api",
+        "Match": {
+          "Path": "/booking-vehicules/{**catch-all}"
+        }
       }
     },
     "Clusters": {
