Create An annocement with new design and postgrest in back

--- a/reverse-proxy/appsettings.json
+++ b/reverse-proxy/appsettings.json
@@ -67,6 +67,12 @@
         "Match": {
           "Path": "/booking-vehicules/{**catch-all}"
         }
+      },
+      "announcements": {
+        "ClusterId": "badgeur-api",
+        "Match": {
+          "Path": "/announcements/{**catch-all}"
+        }
       }
     },
     "Clusters": {
