--- a/reverse-proxy/appsettings.json
+++ b/reverse-proxy/appsettings.json
@@ -73,6 +73,12 @@
         "Match": {
           "Path": "/announcements/{**catch-all}"
         }
+      },
+      "tickets": {
+        "ClusterId": "badgeur-api",
+        "Match": {
+          "Path": "/tickets/{**catch-all}"
+        }
       }
     },
     "Clusters": {
