--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -2,7 +2,13 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information",
+      "Microsoft.AspNetCore.Hosting": "Information",
+      "Microsoft.AspNetCore.Routing": "Information"
+    },
+    "Console": {
+      "IncludeScopes": true,
+      "TimestampFormat": "[yyyy-MM-dd HH:mm:ss] "
     }
   }
 }
