Fixed bug preventing the booking of a meeting room and adding participants

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,8 @@ badgeur-backend.http
 # Other common ignores
 Thumbs.db
 .DS_Store
+/backend/Endpoints/BookingRoomEndpoints.cs
+/.sonarqube
+/TestResults
+/.idea
+/backend/.sonarqube
