--- a/.github/workflows/docker-dev.yml
+++ b/.github/workflows/docker-dev.yml
@@ -28,6 +28,21 @@ jobs:
             dotnet restore
             dotnet test --configuration Release --nologo
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '25'
+          cache: 'npm'
+          cache-dependency-path: ./frontend/package-lock.json
+
+      - name: Install frontend dependencies
+        working-directory: ./frontend
+        run: npm ci
+
+      - name: Run frontend tests
+        working-directory: ./frontend
+        run: npm test -- --ci
+
       - name: Sanity check variables (masked)
         run: |
             test -n "$SUPABASE_URL" || (echo "SUPABASE_URL missing" && exit 1)
