--- a/.github/workflows/docker-prod.yml
+++ b/.github/workflows/docker-prod.yml
@@ -16,12 +16,38 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+  
+      - name: Setup .NET 8 SDK
+        uses: actions/setup-dotnet@v4
+        with:
+            dotnet-version: 8.0.x
+
+      - name: Restore and run tests
+        working-directory: ./badgeur-backend-tests
+        run: |
+            dotnet restore
+            dotnet test --configuration Release --nologo
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '25'
+          cache: 'npm'
+          cache-dependency-path: ./frontend/package-lock.json
+
+      - name: Install frontend dependencies
+        working-directory: ./frontend
+        run: npm ci
+
+      - name: Run frontend tests
+        working-directory: ./frontend
+        run: npm test -- --ci
 
       - name: Sanity check variables (masked)
         run: |
-          test -n "$SUPABASE_URL" || (echo "SUPABASE_URL missing" && exit 1)
-          test -n "$SUPABASE_KEY" || (echo "SUPABASE_KEY missing" && exit 1)
-          test -n "$JWT_SECRET"   || (echo "JWT_SECRET missing" && exit 1)
+            test -n "$SUPABASE_URL" || (echo "SUPABASE_URL missing" && exit 1)
+            test -n "$SUPABASE_KEY" || (echo "SUPABASE_KEY missing" && exit 1)
+            test -n "$JWT_SECRET"   || (echo "JWT_SECRET missing" && exit 1)
 
       - name: Compose config
         run: docker compose -f docker-compose.prod.yml config
