FIxed warnings resulting from some variables requiring a required modifier. Fixed warnings from useless JsonSerializable modifiers.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,7 +9,7 @@ COPY . .
 
 # Restore NuGet packages
 RUN dotnet nuget add source https://api.nuget.org/v3/index.json -n nuget.org || true && \
-    dotnet restore badgeur-backend.csproj --disable-parallel
+    dotnet restore badgeur-backend.csproj --disable-parallel -v detailed
 
 # Expose port
 EXPOSE 8080
