Attempt to fix CI/CD pipeline

--- a/.github/workflows/docker-dev.yml
+++ b/.github/workflows/docker-dev.yml
@@ -26,7 +26,7 @@ jobs:
         working-directory: ./badgeur-backend-tests
         run: |
             dotnet restore
-            dotnet test --configuration Release --nologo
+            dotnet test --configuration Release --nologo /p:UseSharedCompilation=false
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
