Integrated Cypress and the first E2E scenario (login)

--- a/docker-compose.local.dev.yml
+++ b/docker-compose.local.dev.yml
@@ -64,6 +64,7 @@ services:
           ignore:
             - ./frontend/node_modules/
             - ./frontend/build/
+            - ./frontend/cypress/
 
 networks:
   badgeur-network:
