Fixed issue that stopped us from opening the Swagger API for the reverse proxy.
Swagger is now once again available at:
http://localhost:8080/swagger/index.html

--- a/reverse-proxy/appsettings.json
+++ b/reverse-proxy/appsettings.json
@@ -91,6 +91,18 @@
         "Match": {
           "Path": "/rooms/{**catch-all}"
         }
+      },
+      "swagger": {
+        "ClusterId": "badgeur-api",
+        "Match": {
+          "Path": "/swagger/{**catch-all}"
+        }
+      },
+      "swagger-json": {
+        "ClusterId": "badgeur-api",
+        "Match": {
+          "Path": "/swagger/v1/swagger.json"
+        }
       }
     },
     "Clusters": {
